debugged mobile layout issues

--- a/dev/sdw.sass
+++ b/dev/sdw.sass
@@ -24,8 +24,8 @@ body
   height: 100vh
   background-image: url(site-bg.png)
   background-size: cover
-  @media screen and (max-height: 670px)
-    height: 100%
+  @media screen and (max-height: 1024px)
+    height: auto
 
 @media (prefers-color-scheme: dark) 
   body
